--- a/index.css
+++ b/index.css
@@ -117,7 +117,6 @@
   border-radius: 10px;
 }
 
-
 .social-media-icon:hover {
   fill: black;
   box-shadow: 0px 0px 10px white;
@@ -130,4 +129,13 @@
     align-items: center;
     flex-direction: column;
   }
+
+  .footer-person-card {
+    width: 60%;
+    padding: 20px;
+    flex-grow: 1;
+    text-align: center;
+    color: white;
+  }
+
 }
