--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@
 }
 
 .header-text {
-  width: 90%;
+  width: 50%;
   margin: 30px auto 0;
   font-size: 20px;
   color: white;
@@ -61,6 +61,17 @@
 /* ___ Content ___ */
 .content-container {
   background-color: rgb(78, 78, 78);
+  background-image: url("./images/night_bg2.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
+.content__title {
+  color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  margin: 25px auto 0;
 }
 
 .css-content-text {
@@ -73,14 +84,14 @@
 }
 
 .css-content-img {
-  width: 75%;
-  height: 90vh;
+  width: 90%;
+  height: 420px;
   margin: 0 auto 0;
 }
 
 /* ___ Footer ___ */
 .footer-container {
-  background-color: rgb(32, 32, 32);
+  background-color: rgb(0, 0, 0);
   display: flex;
   flex-direction: row;
 }
@@ -138,4 +149,9 @@
     color: white;
   }
 
+  .css-content-img {
+    width: 90%;
+    height: 420px;
+    margin: 0 auto 0;
+  }
 }
