--- a/index.css
+++ b/index.css
@@ -21,8 +21,24 @@
   width: 90%;
   margin: 0 auto 0;
   font-size: 45px;
-  color: white;
   text-align: center;
+  color: white;
+  animation: titleAnimation 3s linear;
+}
+
+
+@keyframes titleAnimation {
+  from {
+    transform: translateX(-100px);
+    opacity: 0.1;
+    color: rgb(173, 3, 3);
+  }
+
+  to {
+    transform: translateX(0);
+    opacity: 1;
+    color: white;
+  }
 }
 
 .header-text {
@@ -129,7 +145,6 @@
 }
 
 .social-media-icon:hover {
-  fill: black;
   box-shadow: 0px 0px 10px white;
 }
 
@@ -154,4 +169,16 @@
     height: 420px;
     margin: 0 auto 0;
   }
+  .css-content-text {
+    padding: 40px 30px 20px;
+  }
+}
+
+/* responsive */
+
+@media only screen and (max-width: 468px) {
+  .css-content-text {
+    width: 95%;
+    padding: 25px 10px 20px;
+}
 }
